# Renderware-Modding-Suite

./: .gitignore  CODING_GUIDELINES.md  LICENSE  README.md  RenderwareModdingSuite.spec  build.py  build_simple.py  requirements.txt
.github/workflows/: main.yml
application/: content_area.py  debug_system.py  file_explorer.py  main.py  main_application.py  responsive_utils.py  status_bar.py  styles.py  tools_panel.py
application/common/: DFF.py  __init__.py  message_box.py  rw_versions.py  txd.py
application/tools/: __init__.py  tool_registry.py
application/tools/DFF_Viewer/: DFF_Viewer.py
application/tools/IDE_Editor/: IDE_Editor.py  IDE_core.py  schema.json
application/tools/IMG_Editor/: IMG_Editor.py  __init__.py  archive_tab.py  context_menu.py  img_controller.py  progress_dialog.py  ui_components.py  ui_interaction_handlers.py
application/tools/IMG_Editor/core/: Core.py  File_Operations.py  IMG_Operations.py  Import_Export.py  __init__.py
application/tools/RW_Analyze/: RW_Analyze.py
application/tools/TXD_Editor/: TXD_Editor.py
application/tools/img_editor/: __init__.py  img_editor.py  img_editor.py.bak
application/tools/img_editor/components/: img_core_classes.py
backend/: CMakeLists.txt
backend/src/: main.cpp  main_application.cpp  main_application.h  renderware_handler.h
backend/src/handlers/: col_handler.cpp  col_handler.h  dff_handler.cpp  dff_handler.h  ide_handler.cpp  ide_handler.h  ifp_handler.cpp  ifp_handler.h  ipl_handler.cpp  ipl_handler.h  txd_handler.cpp  txd_handler.h
frontend/: backend_manager.py  content_area.py  main_application.py  status_bar.py  styles.py  tools_panel.py
frontend/tools/: __init__.py  backup_manager.py  batch_converter.py  file_validator.py  file_viewers.py  img_editor.py  tool_registry.py
